--- a/src/app/variables/overview/overview.component.scss
+++ b/src/app/variables/overview/overview.component.scss
@@ -1,4 +1,6 @@
-@import '../../../theme';
+@use '@angular/material' as mat;
+@use '../../../theme.scss';
+@import '../../../style.scss';
 
 :host {
   mat-header-row {
@@ -8,7 +10,7 @@
     mat-header-cell {
       padding-left: 10px;
       font-size: 16px;
-      color: mat-color($ngapimock-app-primary);
+      color: mat.get-color-from-palette(theme.$ngapimock-primary);
     }
   }
 
@@ -18,7 +20,7 @@
 
     mat-footer-cell {
       padding: 0 10px 0 10px;
-      color: mat-color($ngapimock-app-primary);
+      color: mat.get-color-from-palette(theme.$ngapimock-primary);
     }
   }
 
@@ -47,12 +49,12 @@
   }
 
   input {
-    border: 1px solid mat-color($ngapimock-app-secondary, 300);
+    border: 1px solid mat.get-color-from-palette(theme.$ngapimock-secondary, 300);
   }
 
   input:focus {
     z-index: 10;
     outline: none !important;
-    box-shadow: 0 0 0 0.2rem mat-color($ngapimock-app-primary, 300);
+    box-shadow: 0 0 0 0.2rem mat.get-color-from-palette(theme.$ngapimock-primary, 300);
   }
 }
