--- a/src/style.scss
+++ b/src/style.scss
@@ -1,14 +1,5 @@
-@import '~@angular/material/theming';
-
-@include mat-core();
-
-$ngapimock-app-primary: mat-palette($mat-green);
-$ngapimock-app-secondary: mat-palette($mat-grey);
-$ngapimock-app-accent:  mat-palette($mat-pink, A200, A100, A400);
-$ngapimock-app-warn:    mat-palette($mat-red);
-$ngapimock-app-theme: mat-light-theme($ngapimock-app-primary, $ngapimock-app-accent, $ngapimock-app-warn);
-
-@include angular-material-theme($ngapimock-app-theme);
+@use '@angular/material' as mat;
+@use 'theme.scss';
 
 @font-face {
   font-family: "icomoon";
@@ -19,6 +10,16 @@ $ngapimock-app-theme: mat-light-theme($ngapimock-app-primary, $ngapimock-app-acc
   url("assets/fonts/icomoon.svg?37hrac#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
+}
+
+
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 // typography styles --------------------------------------------------------
@@ -34,7 +35,7 @@ body {
 }
 
 h2 {
-  color: mat-color($ngapimock-app-primary, 400);
+  color: mat.get-color-from-palette(theme.$ngapimock-secondary, 400);
 }
 
 *,
@@ -141,7 +142,15 @@ mat-dialog-container {
 }
 
 mat-table {
-  border: 1px solid mat-color($ngapimock-app-secondary, 300)
+  border: 1px solid mat.get-color-from-palette(theme.$ngapimock-secondary, 300)
+}
+
+mat-row {
+  min-height: 40px !important;
+
+  &:nth-child(even){
+    background-color: mat.get-color-from-palette(theme.$ngapimock-secondary, 100);
+  }
 }
 
 /* Material overrides */
@@ -149,7 +158,7 @@ mat-select {
   margin: 0 10px 0 0;
   padding: 2px;
   border-radius: 2px;
-  border: 1px solid mat-color($ngapimock-app-secondary, 300);
+  border: 1px solid mat.get-color-from-palette(theme.$ngapimock-secondary, 300);
 
   .mat-select-trigger {
     display: inline-table;
@@ -160,6 +169,10 @@ mat-select {
   }
 }
 
-mat-row {
-  min-height: 40px !important;
-}
+//.mat-mdc-row {
+//  min-height: 40px !important;
+//
+//  &:nth-child(even){
+//    background-color: mat.get-color-from-palette(theme.$ngapimock-secondary, 100);
+//  }
+//}
