feat: Make required changes to work with ng 17

--- a/src/app/recordings/details/details.component.html
+++ b/src/app/recordings/details/details.component.html
@@ -13,7 +13,7 @@
 
     <ng-container matColumnDef="value">
         <mat-cell *matCellDef="let element">
-            <pre [innerHtml]="element.value | prettyjson:2"></pre>
+            <pre [innerHtml]="element.value | json"></pre>
             </mat-cell>
     </ng-container>
 
@@ -28,7 +28,7 @@
 
     <ng-container matColumnDef="value">
         <mat-cell *matCellDef="let element">
-            <pre [innerHtml]="element.value | prettyjson:2"></pre>
+            <pre [innerHtml]="element.value | json"></pre>
         </mat-cell>
     </ng-container>
 
