--- a/src/app/recordings/overview/overview.component.html
+++ b/src/app/recordings/overview/overview.component.html
@@ -21,7 +21,7 @@
             <mat-header-cell *matHeaderCellDef mat-sort-header> Method</mat-header-cell>
             <mat-cell *matCellDef="let element">
                   <span matBadge="{{element.request.method }}"
-                        matBadgeColor="{{element.request.method | lowercase }}"></span>
+                        matBadgeColor="primary"></span>
             </mat-cell>
         </ng-container>
 
