--- a/src/app/variables/overview/overview.component.html
+++ b/src/app/variables/overview/overview.component.html
@@ -11,7 +11,7 @@
         <ng-container matColumnDef="key">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Key</mat-header-cell>
             <mat-cell *matCellDef="let element">
-                <input *ngIf="!element.exists; else elseBlock" matInput type="text" placeholder="key" class="key"
+                <input *ngIf="!element.exists; else elseBlock" matInput type="text" placeholder="key" class="variable-key"
                        [(ngModel)]="element.key">
                 <ng-template #elseBlock>{{element.key}}</ng-template>
             </mat-cell>
@@ -20,7 +20,7 @@
         <ng-container matColumnDef="value">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Value</mat-header-cell>
             <mat-cell *matCellDef="let element">
-                <input matInput type="text" class="value" placeholder="value"
+                <input matInput type="text" class="variable-value" placeholder="value"
                        [(ngModel)]="element.value" (keyup)="onUpdateVariableValue(element)"
                        [(ngModel)]="element.value"></mat-cell>
         </ng-container>
