chore: fix image build path

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -43,7 +43,7 @@
 </mat-toolbar>
 
 <article class="jumbotron">
-  <img class="angular-image" ngSrc="../../assets/images/angular_white.png" width="144" height="144" />
+  <img class="angular-image" ngSrc="assets/images/angular_white.png" width="144" height="144" />
   <h1>Scenario based api mocking</h1>
   <header class="container"></header>
 </article>
