feat: add core version to header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
   <mat-toolbar-row>
-    <a class="brand">ng-apimock</a>
+  <a class="brand">ng-apimock</a><span class="version">v{{coreVersion}}</span>
     <button
       aria-controls="toolbarContent"
       aria-expanded="false"
