--- a/src/app/presets/details/details.component.html
+++ b/src/app/presets/details/details.component.html
@@ -1,47 +1,68 @@
-<h2>Preset: {{data.name}}</h2>
+<h2 mat-dialog-title>Preset: {{ data.name }}</h2>
+<mat-dialog-content>
+  <mat-tab-group>
+    <mat-tab label="Mocks details">
+      <mat-table [dataSource]="mocksDataSource" matSort class="mocks">
+        <ng-container matColumnDef="name">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>
+            Name</mat-header-cell
+          >
+          <mat-cell *matCellDef="let element">{{ element.name }}</mat-cell>
+        </ng-container>
 
+        <ng-container matColumnDef="scenario">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>
+            Scenario</mat-header-cell
+          >
+          <mat-cell *matCellDef="let element">{{ element.scenario }}</mat-cell>
+        </ng-container>
 
+        <ng-container matColumnDef="delay">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>
+            Delay</mat-header-cell
+          >
+          <mat-cell *matCellDef="let element">{{ element.delay }}</mat-cell>
+        </ng-container>
 
-<h4>Mocks details</h4>
-<mat-table [dataSource]="mocksDataSource" matSort class="mocks">
-  <ng-container matColumnDef="name">
-    <mat-header-cell *matHeaderCellDef mat-sort-header> Name</mat-header-cell>
-    <mat-cell *matCellDef="let element">{{element.name}}</mat-cell>
-  </ng-container>
+        <ng-container matColumnDef="echo">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>
+            Echo</mat-header-cell
+          >
+          <mat-cell *matCellDef="let element">{{ element.echo }}</mat-cell>
+        </ng-container>
 
-  <ng-container matColumnDef="scenario">
-    <mat-header-cell *matHeaderCellDef mat-sort-header> Scenario</mat-header-cell>
-    <mat-cell *matCellDef="let element">{{element.scenario}}</mat-cell>
-  </ng-container>
+        <mat-header-row
+          *matHeaderRowDef="mocksDisplayedColumns"
+        ></mat-header-row>
+        <mat-row *matRowDef="let row; columns: mocksDisplayedColumns"></mat-row>
+      </mat-table>
+    </mat-tab>
+    <mat-tab label="Variables details">
+      <mat-table [dataSource]="variablesDataSource" matSort class="variables">
+        <ng-container matColumnDef="key">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>
+            Key</mat-header-cell
+          >
+          <mat-cell *matCellDef="let element">{{ element.key }}</mat-cell>
+        </ng-container>
 
-  <ng-container matColumnDef="delay">
-    <mat-header-cell *matHeaderCellDef mat-sort-header> Delay</mat-header-cell>
-    <mat-cell *matCellDef="let element">{{element.delay}}</mat-cell>
-  </ng-container>
+        <ng-container matColumnDef="value">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>
+            Value</mat-header-cell
+          >
+          <mat-cell *matCellDef="let element">{{ element.value }}</mat-cell>
+        </ng-container>
 
-  <ng-container matColumnDef="echo">
-    <mat-header-cell *matHeaderCellDef mat-sort-header> Echo</mat-header-cell>
-    <mat-cell *matCellDef="let element">{{element.echo}}</mat-cell>
-  </ng-container>
-
-  <mat-header-row *matHeaderRowDef="mocksDisplayedColumns"></mat-header-row>
-  <mat-row *matRowDef="let row; columns: mocksDisplayedColumns;"></mat-row>
-
-</mat-table>
-
-@if (variablesDataSource.data.length > 0) {
-  <h4>Variables details</h4>
-  <mat-table [dataSource]="variablesDataSource" matSort class="variables">
-    <ng-container matColumnDef="key">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Key</mat-header-cell>
-      <mat-cell *matCellDef="let element">{{element.key}}</mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="value">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Value</mat-header-cell>
-      <mat-cell *matCellDef="let element">{{element.value}}</mat-cell>
-    </ng-container>
-    <mat-header-row *matHeaderRowDef="variablesDisplayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: variablesDisplayedColumns;"></mat-row>
-  </mat-table>
-}
-<br />
+        <mat-header-row
+          *matHeaderRowDef="variablesDisplayedColumns"
+        ></mat-header-row>
+        <mat-row
+          *matRowDef="let row; columns: variablesDisplayedColumns"
+        ></mat-row>
+      </mat-table>
+    </mat-tab>
+  </mat-tab-group>
+</mat-dialog-content>
+<mat-dialog-actions align="end">
+  <button mat-button mat-dialog-close>Close</button>
+</mat-dialog-actions>
